DOMCache should not prevent pages from entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=202590

Reviewed by Youenn Fablet.

Source/WebCore:

Allow DOMCache to suspend in the back/forward cache unconditionally, by
appending all promise resolutions to a SuspendableTaskQueue. This guarantees
that any asynchronous promise resolution is delayed while in the page cache,
until the page gets resumed.

Test: http/tests/navigation/page-cache-domcache-pending-promise.html

* Modules/cache/DOMCache.cpp:
(WebCore::DOMCache::DOMCache):
(WebCore::DOMCache::match):
(WebCore::DOMCache::matchAll):
(WebCore::DOMCache::addAll):
(WebCore::DOMCache::putWithResponseData):
(WebCore::DOMCache::put):
(WebCore::DOMCache::remove):
(WebCore::DOMCache::keys):
(WebCore::DOMCache::canSuspendForDocumentSuspension const):
* Modules/cache/DOMCache.h:

LayoutTests:

Add layout test coverage.

* TestExpectations:
* http/tests/navigation/page-cache-domcache-pending-promise-expected.txt: Added.
* http/tests/navigation/page-cache-domcache-pending-promise.html: Added.

Canonical link: https://commits.webkit.org/216115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250786 268f45cc-cd09-0410-ab3c-d52691b4dbfc