Source/WebCore/Modules/cache/DOMCache.h
@@ -28,10 +28,12 @@
 #include "ActiveDOMObject.h"
 #include "CacheStorageConnection.h"
 #include "CacheStorageRecord.h"
+#include <wtf/UniqueRef.h>
 
 namespace WebCore {
 
 class ScriptExecutionContext;
+class SuspendableTaskQueue;
 
 class DOMCache final : public RefCounted<DOMCache>, public ActiveDOMObject {
 public:
@@ -56,7 +58,7 @@ public:
     const String& name() const { return m_name; }
     uint64_t identifier() const { return m_identifier; }
 
-    using MatchCallback = WTF::Function<void(ExceptionOr<FetchResponse*>)>;
+    using MatchCallback = Function<void(ExceptionOr<RefPtr<FetchResponse>>)>;
     void doMatch(RequestInfo&&, CacheQueryOptions&&, MatchCallback&&);
 
     CacheStorageConnection& connection() { return m_connection.get(); }
@@ -90,6 +92,7 @@ private:
 
     Vector<CacheStorageRecord> m_records;
     bool m_isStopped { false };
+    UniqueRef<SuspendableTaskQueue> m_taskQueue;
 };
 
 } // namespace WebCore
